# OasisCrop

./: .gitignore  CITATION.cff  LICENSE  README.md  THIRD_PARTY_NOTICE.md  environment.yml  pyproject.toml  repository_manifest.csv
configs/: oasiscrop_v1.yaml
docs/: data_code_mapping.md  model_card.md  release_checklist.md
oasiscrop/inference/: aggregate_1ha_fraction.py  predict_tiles.py
oasiscrop/models/: __init__.py  oasiscropnet.py
oasiscrop/training/: train.py
oasiscrop/validation/: summarize_strata.py  validate_binary_rasters.py
scripts/: predict_example.ps1  train_example.ps1  validate_example.ps1
