[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "oasiscrop"
version = "1.0.0"
description = "Code for the OasisCrop 1 m net-cropland dataset."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
  "numpy",
  "pandas",
  "torch",
  "torchvision",
  "opencv-python",
  "tqdm",
  "PyYAML",
  "tifffile"
]

[project.optional-dependencies]
geospatial = [
  "GDAL"
]

[tool.setuptools.packages.find]
include = ["oasiscrop*"]
